2007-01-22 Braden McDaniel  <braden@endoframe.com>

	* src/libopenvrml/openvrml/vrml97node.cpp
	(viewpoint_node::viewpoint_node(const node_type &, const
	boost::shared_ptr<openvrml::scope> &)): Reordered
	user_view_transform_ initialization to match declaration order.

2007-01-21 Braden McDaniel  <braden@endoframe.com>

	Moved definition of USE_STENCIL_SHAPE out of the header.

	* src/libopenvrml-gl/openvrml/gl/viewer.cpp
	* src/libopenvrml-gl/openvrml/gl/viewer.h

2007-01-21 Braden McDaniel  <braden@endoframe.com>

	* src/libopenvrml-gl/openvrml/gl/viewer.cpp: Improved comments.

2007-01-16 Braden McDaniel  <braden@endoframe.com>

	* src/libopenvrml/openvrml/basetypes.cpp
	(openvrml::make_rotation(const vec3f &, const vec3f &)): Normalize
	the rotation axis.

2007-01-16 Braden McDaniel  <braden@endoframe.com>

	* src/libopenvrml-gl/openvrml/gl/viewer.cpp
	(compute_scp_y_axis(const
	std::vector<openvrml::vec3f>::const_iterator &, const
	std::vector<openvrml::vec3f>::const_iterator &, const
	std::vector<openvrml::vec3f>::const_iterator &, const
	openvrml::vec3f &)): Fixed for the last point of a closed spine.

2007-01-15 Braden McDaniel  <braden@endoframe.com>

	Rewrote/refactored Extrusion coordinate generation for correctness
	and readability.

	* src/libopenvrml-gl/openvrml/gl/viewer.cpp
	(get_spine_length(const std::vector<openvrml::vec3f> &)): Added
	function; get the length of an extrusion spine.
	(get_cross_section_length(const std::vector<openvrml::vec2f> &)):
	Added function; get the length of an extrusion cross-section.
	(compute_scp_y_axis(const
	std::vector<openvrml::vec3f>::const_iterator &, const
	std::vector<openvrml::vec3f>::const_iterator &, const
	std::vector<openvrml::vec3f>::const_iterator &, const
	openvrml::vec3f &)): Added function; compute the y-axis of an
	extrusion spine-aligned cross-section plane at a given point.
	(compute_scp_z_axis(const
	std::vector<openvrml::vec3f>::const_iterator &, const